force-app/main/default/objects/Vendor_Program_Group__c/Vendor_Program_Group__c.object-meta.xml
<CustomObject>
    <description>Logical grouping of vendor program configurations that share requirement sets, rules, and stage dependencies; used by the onboarding wizard for selection and inheritance.</description>
    <label>Vendor Program Group</label>
    <pluralLabel>Vendor Program Groups</pluralLabel>
    <nameField>
        <label>Vendor Program Group Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>