force-app/main/default/objects/Vendor_Program_Group__c/fields/Default_Requirement_Group__c.field-meta.xml
<CustomField>
    <fullName>Default_Requirement_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects Program Group → Requirement Group (central for inheritance).</description>
    <label>Default Requirement Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Group</relationshipLabel>
    <relationshipName>Default_Requirement_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>