force-app/main/default/objects/Vendor_Program_Group__c/fields/Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Logic_Type__c</fullName>
    <label>Logic Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>