force-app/main/default/objects/Vendor_Program_Group__c/fields/Requires_NDA__c.field-meta.xml
<CustomField>
    <fullName>Requires_NDA__c</fullName>
    <description>Indicates this program group requires an NDA on file for eligibility.</description>
    <inlineHelpText>When selected, accounts must have a completed NDA onboarding to be eligible for programs in this group.</inlineHelpText>
    <label>Requires NDA</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>