force-app/main/default/objects/Vendor_Program_Group__c/fields/Requires_Program_Base__c.field-meta.xml
<CustomField>
    <fullName>Requires_Program_Base__c</fullName>
    <description>Indicates this program group requires a Program Base Application on file for eligibility.</description>
    <inlineHelpText>When selected, accounts must have a completed Program Base Application onboarding to be eligible.</inlineHelpText>
    <label>Requires Program Base</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>